# optical_tweezer_CGH

./: README.md  pyproject.toml
vanillanet/: __init__.py  compare.py  data.py  debug.py  device.py  grad_des.py  gs.py  metrics.py  model.py  neural_net.py  utils.py
